[package]
name = "grpc_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1"
chrono = "0.4"
serde = "1"
serde_json = "1"
rand = "0.8"
once_cell = "1"

async-stream = "0.3"
#grpc
tonic = "0.6" # Rust gRPC implementation
prost = "0.9" # Rust Protocol Buffers implementation
prost-types = "0.9" # Contains definitions of Protocol Buffers well-known types
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.6"
